crates/uitest/fixtures/mir_check/move_reinit.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/move_reinit.fe
---
error[10-0002]: move conflict in `fn move_reinit`
  ┌─ move_reinit.fe:4:5
  │
3 │     let y: u256 = move x
  │                        - `x` is moved here
4 │     x = 1
  │     ^^^^^ cannot assign to a value after it was moved
